force-app/main/default/objects/smagicinteract__License__c/smagicinteract__License__c.object-meta.xml
<CustomObject>
    <label>License</label>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>