force-app/main/default/objects/smagicinteract__License__c/fields/smagicinteract__Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Code__c</fullName>
    <label>Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>