force-app/main/default/objects/smagicinteract__License__c/fields/smagicinteract__Label__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Label__c</fullName>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>