force-app/main/default/objects/smagicinteract__License__c/fields/smagicinteract__License_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__License_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Type</label>
    <referenceTo>smagicinteract__License_Type__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>