force-app/main/default/objects/smagicinteract__License__c/fields/smagicinteract__Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores information of a license whether a license is active or not.</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>