force-app/main/default/objects/smagicinteract__License__c/fields/smagicinteract__Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Type__c</fullName>
    <description>This field will provide information about the license type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>