force-app/main/default/objects/smagicinteract__License__c/fields/smagicinteract__User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores information of a user to which license is assigned.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>