force-app/main/default/objects/smagicinteract__License__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Code__c</columns>
    <columns>smagicinteract__Type__c</columns>
    <columns>smagicinteract__Label__c</columns>
    <columns>smagicinteract__Status__c</columns>
    <columns>smagicinteract__User__c</columns>
    <columns>smagicinteract__License_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>